Add AWS CRT as a dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ requires-dist =
         wcwidth<0.2.0
         prompt-toolkit>=2.0.0,<3.0.0
         distro>=1.5.0,<1.6.0
+        awscrt==0.10.2
 
 
 [check-manifest]
